# llm2smt

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  fuzz.py
cmake/: FetchDependencies.cmake
docs/: _config.yml  _toc.yml  architecture.md  index.md  ir-and-parsing.md  operations.md  performance-loop.md  preprocessing.md  proofs-models.md  qf-lra.md  sat-euf.md
eval_results/: full-current-20260703-093619.summary  full-current-20260703-093619.tsv  full-z3-20260703-093850.summary  full-z3-20260703-093850.tsv
prompts/: diamonds.txt  p0.txt  p00.txt  p1.txt  p2.txt  proof.txt  sel.txt
scripts/: _model_check.py  build_docs.sh  check_model.py  compare.sh  compare_z3_stats.py  fuzz.py  fuzz_modes.sh  fuzz_uf_symmetry.py  gen_uf_symmetry_seeds.py  make_smac_instances.py  minimize_smt2.py  oracle_proof_fail.sh  qf_lra_eval.py  qf_lra_perf_loop.py  requirements-smac.txt  smac_llm2smt.py  smt2_unsat_core.py  yinyang_fuzz.sh
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  node.h  node_manager.cpp  node_manager.h  stats.h  symbol_table.h
src/parser/: CMakeLists.txt  smt2_visitor.cpp  smt2_visitor.h  smt_context.h
src/preprocessor/: CMakeLists.txt  disjunction_bridge.cpp  disjunction_bridge.h  fml.h  nnf.h  preproc_options.h  simplifier.cpp  simplifier.h
src/proof/: CMakeLists.txt  lean_emitter.cpp  lean_emitter.h  proof_minimizer.cpp  proof_minimizer.h
src/sat/: CMakeLists.txt  cadical_solver.cpp  cadical_solver.h  ipasir_up.h
src/theories/euf/: CMakeLists.txt  cc.cpp  cc.h  euf_solver.cpp  euf_solver.h  flattener.cpp  flattener.h
src/theories/lra/: CMakeLists.txt  lra_solver.cpp  lra_solver.h  rational.cpp  rational.h
tests/: CMakeLists.txt  test_cc.cpp  test_euf_solver.cpp  test_lra_solver.cpp  test_node_manager.cpp  test_preprocessor.cpp
tests/fuzz/uf_symmetry/: fixed_choice_n2_t5.smt2  fixed_choice_n3_t5.smt2  fixed_choice_n4_t5.smt2  latin_square_fixed_n2.smt2  latin_square_fixed_n3.smt2  latin_square_fixed_n4.smt2  manifest.tsv  mixed_fixed_moving_n2_t5.smt2  mixed_fixed_moving_n3_t5.smt2  mixed_fixed_moving_n4_t5.smt2  moving_binary_table_n2.smt2  moving_binary_table_n3.smt2  moving_binary_table_n4.smt2  moving_unary_cycle_n2.smt2  moving_unary_cycle_n3.smt2  moving_unary_cycle_n4.smt2
tests/smt2/: lra01_bound_conflict.smt2  lra02_linear_eq_unsat.smt2  lra03_strict_unsat.smt2  lra04_diseq_sat.smt2  lra05_arith_ite_sat.smt2  lra06_large_rational_sat.smt2  lra07_false_equality_unsat.smt2  lra08_model_gt.smt2  lra09_min_conflict.smt2  lra10_const_fold_unsat.smt2  lra11_nary_distinct_unsat.smt2  lra12_simple_eq_amo.smt2  lra13_term_cache_ite.smt2  lra14_symmetric_eq_cache.smt2  lra15_eq_elim_triangular.smt2  lra16_eq_elim_inconsistent.smt2  lra17_eq_elim_rational.smt2  lra18_eq_elim_guarded.smt2  lra19_eq_elim_model.smt2  lra20_eq_elim_disabled_stats.smt2  lra21_const_simplify_bool.smt2  lra22_arith_ite_const_cond.smt2  lra23_arith_ite_equal_branches.smt2  lra24_bool_ite_const_branches.smt2  lra25_finite_domain_eqdefs.smt2  lra26_finite_domain_bounds.smt2  lra27_direct_eq_atom.smt2  lra28_direct_eq_guarded_negation.smt2  lra30_structural_bool_cache.smt2  lra31_flatten_ite_chain.smt2  lra32_simple_graph_dl_unsat.smt2  lra33_simple_graph_utvpi_unsat.smt2  lra34_simple_graph_mixed_general_unsat.smt2  lra35_simple_graph_prop_stats.smt2  lra36_dl_fast_path_unary_unsat.smt2  lra37_dl_fast_path_guarded_fallback.smt2  lra38_structural_ite_term_cache.smt2  lra39_unate_lemmas.smt2  t01_unsat_direct.smt2  t02_unsat_transitive.smt2  (+72 more)
